--- a/exercise_two/src/App.css
+++ b/exercise_two/src/App.css
@@ -1,38 +1,44 @@
-.App {
+/* put all single instance classes in here */
+
+.SiteWrapper {
+  margin: 0 auto;
+  max-width: 1080px;
+  padding: 0 25px;
+  width: 100%;
+
+}
+
+.Home {
+  margin: 0 auto;
+  max-width: 640px;
+}
+
+.Home h1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.WeatherInfo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
-.App-link {
-  color: #61dafb;
+.WeatherInfo_Img {
+  flex-basis: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.WeatherInfo_Data {
+  flex-basis: 50%;
+}
+
+.WeatherInfo_Data .CurrentTemperature p{
+  font-size: 140px;
+  font-weight: bold;
+  line-height: 140px;
+  margin: 0;
+}
+
+.OtherTemperatures p{
+  font-size: 24px;
+  line-height: 24px;
 }
