--- a/exercise_two/src/index.css
+++ b/exercise_two/src/index.css
@@ -1,3 +1,9 @@
+/* universal styles */
+
+*{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
