--- a/exercise_two/src/App.css
+++ b/exercise_two/src/App.css
@@ -25,6 +25,7 @@
 
 .WeatherInfo_Img {
   flex-basis: 50%;
+  font-size: 140px;
 }
 
 .WeatherInfo_Data {
@@ -41,4 +42,32 @@
 .OtherTemperatures p{
   font-size: 24px;
   line-height: 24px;
+}
+
+.Header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.CitiesNav {
+  display: flex;
+}
+
+.CitiesNav a {
+  color: black;
+  display: block;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 5px 10px;
+  text-decoration: none;
+  transition: border-bottom 400ms ease;
+}
+
+.CitiesNav a :hover {
+  border-bottom: 1px solid black;
+}
+
+.CitiesNav :active {
+  
 }
