--- a/exercise_five/exercise_five/src/index.css
+++ b/exercise_five/exercise_five/src/index.css
@@ -1,3 +1,4 @@
+/* meant for general css */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
