--- a/exercise_five/exercise_five/src/App.css
+++ b/exercise_five/exercise_five/src/App.css
@@ -1,1 +1,27 @@
 /* meant for class specific writing */
+.SignupForm {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+    margin: 40px auto;
+}
+
+.SignupForm input {
+    margin-bottom: 30px;
+}
+
+.Header {
+}
+
+.Header__nav {
+    display: flex;
+    justify-content: flex-end;
+    max-width: 1040px;
+    margin: 0 auto;
+}
+
+.Header__nav a  {
+    color: black;
+    display: block;
+    margin: 10px;
+}
